# bsuirLabs

./: .gitignore  README.md
diploma/: Вводный плакат.graffle  Графические материалы.graffle  ДП, ПЗ dip.docx  ДП, ПЗ.docx  ДП, бланк.docx  ДП, заявление.docx  Диаграмма классов.graffle  Отзыв руководителя.docx  Схема MVC.drawio  Схема MVVM.drawio  Схема структурная.graffle  Характеристика.docx
diploma/disk/: readme.txt
docs/: Договор о прохождении производственной практики.doc
frames/: А1. Альбомная.drawio  А1. Портретная.drawio  А2. Альбомная.drawio  А3. Альбомная.drawio  А3. Портретная.drawio  А4. Альбомная.drawio  А4. Ведомость.drawio  А4. Перечень .drawio  А4. Портретная.drawio  А4. Портретный плакат.drawio  Линии.drawio
term2/АиЛОВТ, КП/: rot.exe.html  Пояснительная записка. А4.docx  Приложение А. Сумматор-умножитель второго типа. Схема электрическая структкрная А3.vsdx  Приложение Б. Таблица 3.2.3 - Поиск простых импликант (C_1* C_1). А2.docx  Приложение В. Таблица 3.2.4 - Поиск простых импликант (C_2* C_2). А2.docx  Приложение Г. ОЧУС. Схема электрическая функциональная. А2.vsdx  Приложение Д. ОЧС. Схема электрическая функциональная. А2.vsdx  Приложение Е. ОЧС. Реализация на мультиплексорах. Схема электрическая функциональная. A2.vsdx  Приложение Ж. Преобразователь множителя. Схема электрическая функциональная. А4.vsdx  Приложение И. Ведомость документов. A4.vsdx
term3/КПиЯП, КП/: Task
term4/КПиЯП/: README.md
term4/СПОВМ/: README.md
term4/СПОВМ, КП/: README.md
term4/СПОВМ, КП/passwordManager/: AES.cpp  AES.h  Bundle.cpp  Bundle.h  BundleUndo.cpp  BundleUndo.h  CMakeLists.txt  EditWindow.cpp  EditWindow.h  EditWindow.ui  File.cpp  File.h  PasswordWindow.cpp  PasswordWindow.h  PasswordWindow.ui  Settings.cpp  Settings.h  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui  main.cpp  startWindow.cpp  startWindow.h  startWindow.ui
term4/ТВиМС/: ТВиМС, ответы к экзамену (2021).pages
term5/CиФОЭВМ/: README.md
term5/ИиПУ/: Темы для лабораторных работ ИиПУ.docx
term5/СхемТ, КП/: Ведомость документов.drawio  Дополнение к структурной схеме.drawio  Перечень элементов.drawio  Пояснительная записка.docx  Принципиальная схема.drawio  Структурная схема.drawio  Функциональная схема.drawio
term5/ТОКС/labworks/ТОКС. 5/: CMakeLists.txt  ТОКС. 5.docx
term5/ТОКС/labworks/ТОКС. 5/Error/: Error.hpp
term5/ТОКС/labworks/ТОКС. 5/LabWork_5.xcodeproj/: project.pbxproj
term5/ТОКС/labworks/ТОКС. 5/LabWork_5.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
term5/ТОКС/labworks/ТОКС. 5/LabWork_5.xcodeproj/project.xcworkspace/xcuserdata/andrejhurynovic.xcuserdatad/: UserInterfaceState.xcuserstate
term5/ТОКС/labworks/ТОКС. 5/LabWork_5.xcodeproj/project.xcworkspace/xcuserdata/ilya.xcuserdatad/: UserInterfaceState.xcuserstate
term5/ТОКС/labworks/ТОКС. 5/LabWork_5.xcodeproj/xcshareddata/xcschemes/: main.xcscheme  mainSM.xcscheme
term5/ТОКС/labworks/ТОКС. 5/LabWork_5.xcodeproj/xcuserdata/andrejhurynovic.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
term5/ТОКС/labworks/ТОКС. 5/LabWork_5.xcodeproj/xcuserdata/ilya.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
term5/ТОКС/labworks/ТОКС. 5/LabWork_5.xcodeproj/xcuserdata/ilya.xcuserdatad/xcschemes/: xcschememanagement.plist
term5/ТОКС/labworks/ТОКС. 5/Marking/: Marking.cpp  Marking.hpp
term5/ТОКС/labworks/ТОКС. 5/Marking/Data Type/Marker/: Marker.hpp
term5/ТОКС/labworks/ТОКС. 5/Marking/Data Type/Marker/Access/: Access.hpp
term5/ТОКС/labworks/ТОКС. 5/Marking/Data Type/Marker/Frame state/: FrameState.hpp
term5/ТОКС/labworks/ТОКС. 5/Marking/Data Type/Status/: Status.hpp
term5/ТОКС/labworks/ТОКС. 5/Menu/: Menu.cpp  Menu.hpp
term5/ТОКС/labworks/ТОКС. 5/Menu/Menu main/: MenuPS.cpp  MenuPS.hpp
term5/ТОКС/labworks/ТОКС. 5/Pseudo Terminal/: Pseudoterminal.cpp  Pseudoterminal.hpp
term5/ТОКС/labworks/ТОКС. 5/Pseudo Terminal/Setting/: PseudoterminalSettings.cpp  PseudoterminalSettings.hpp
term5/ТОКС/labworks/ТОКС. 5/Source/: MenuSM.cpp  MenuSM.hpp  main.cpp
term5/ТОКС/labworks/ТОКС. 5/Station Monitor/: StationMonitor.cpp  StationMonitor.hpp
term5/ТОКС/labworks/ТОКС. 5/Thread Control/: ThreadControl.hpp
term5/ТОКС/labworks/ТОКС. 5/mainSM/: main.cpp
term6/АВП/: README.md  АВП, вопросы к экзамену (2022).docx  Томасуло и ССП.numbers
term6/ОБиПвИТ/: ОБиПвИТ, вопросы к экзамену (2022).pages  ОБиПвИТ, лекции.ppt
term6/ПрактПроизТехн/: ПрактПроизТехн, договор.docx
term6/СА/: README.md  СА, вопросы к экзамену (2022).pages  (+1 more)
(+1611 files in other folders)
